<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Scientists_crud">Scientists Editing Page</string>
    <string name="Instructiune_crud">Instrucțiune</string>
    <string name="Locatia_info">Locația</string>
    <string name="Etajul_info">Etajul</string>
    <string name="Office_info">Biroul</string>
    <string name="function_info">Funcția</string>
    <string name="function_serviciu">Serviciu</string>
    <string name="info_sectia">Secția</string>
    <string name="info_directia">Dirtecția</string>
    <string name="info_directia_generala">Dirtecția generală</string>
    <string name="phone_crud">Telefon fix de serviciu</string>
    <string name="phone_mobile_crud">Telefon mobil de serviciu</string>
    <string name="crud_telefon_intern">Telefon intern</string>
    <string name="crud_cercetari_statistice">Cercetări Statistice</string>
    <string name="crud_e_mail">E-mail</string>
    <string name="crud_info_personal">Informații personale</string>
    <string name="Info_name" tools:ignore="ExtraTranslation">Nume, prenume</string>
    <string name="info_employe">Informație despre angajat</string>
    <string name="info_crud">Adaugați angajatul  în edittext, apoi faceți clic pe butonul de salvare din bara de instrumente. Unele câmpuri precum numele și locați trebuie să fie completate.</string>
    <string name="app_name">Admin Access mobile</string>
    <string name="editeaz_terge">Editează/Șterge</string>
    <string name="view_all">VIEW ALL</string>
    <string name="english_language">english language</string>
    <string name="romanian_language">romanian language</string>
    <string name="russian_language">russian language</string>
    <string name="afteni_tatiana">Afteni Tatiana</string>
    <string name="searcher_1">Searcher</string>
    <string name="adaug_angajat_mou_1">Adaugă angajat mou</string>
    <string name="add_new_employee_1">Add new employee</string>
    <string name="add_new_employee_2">Добавить нового сотрудника</string>
    <string name="todo_1">TODO</string>
    <string name="about_us_1">About us</string>
    <string name="todo_2">TODO</string>
    <string name="todo">TODO</string>
    <string name="administrative_n_authority">Administrative \n authority</string>
    <string name="national_bureau_of_nstatistics_of_the_n_republic_of_moldova">National Bureau of \nStatistics of the \n Republic of Moldova</string>
    <string name="division">Division</string>
    <string name="general_division_for_n_informational_technologies_ndesigning_of_computer_napplications_division">General Division for\n Informational Technologies, \nDesigning of Computer \nApplications Division</string>
    <string name="website">Website</string>
    <string name="https_statistica_gov_md">https://statistica.gov.md/</string>
    <string name="address">Address</string>
    <string name="md_2019_chi_in_u_nstr_grenoble_106">MD-2019 Chişinău,\nstr. Grenoble 106</string>
    <string name="division_head">Division Head</string>
    <string name="bujor_vasile">Bujor Vasile</string>
    <string name="Doru_Marian">HERGHELEGIU Doru-Marian</string>
    <string name="programmer">Programmer</string>
    <string name="gheorghita_natalia">Gheorghita Natalia</string>
    <string name="Lista_angajaților">Lista angajaților</string>
    <string name="bancu_vitalie">Bancu Vitalie</string>
    <string name="scientist_s_name_1">Scientist\'s Name</string>
    <string name="scientists_description_1">Scientists Description</string>
    <string name="depart_model">Depart</string>
    <string name="sectia_model">Sectia</string>
    <string name="sectia_model_1">Sectia</string>
    <string name="phone_model">Phone</string>
    <string name="phonemobile_model">Phonemobile</string>
    <string name="e_mail_model">E-mail</string>
    <string name="description_model">description</string>
    <string name="formneame_model">formneame</string>
    <string name="model_status_2">Status</string>
    <string name="status_4">Status</string>
    <string name="created_date_model_2">Created Date</string>
    <string name="created_date_model5">Created Date</string>
    <string name="remove_date_model6">Remove Date</string>
    <string name="remove_date_model1">Remove Date</string>
    <string name="date_updated_model1">Date Updated</string>
    <string name="date_updated_model3">Date Updated</string>
    <string name="recovery_data_model4">Recovery Data</string>
    <string name="recovery_data_model6">Recovery data</string>
    <string name="galaxy_model_1">Galaxy</string>
    <string name="todo_help_ru">TODO</string>
    <string name="About_help_ru">Об этом приложении</string>
    <string name="android_about_ru">Приложение для списка сотрудников было разработано для облегчения доступа к контактной информации через мобильный телефон (Операционная система: Android).</string>
    <string name="about_3_help_ru">Приложение включает в себя список профилей сотрудников с контактной информацией.</string>
    <string name="about_7_help_ru">Функции, предоставляемые программой (Список должностных лиц НБС (условное название)), сгруппированы по категориям и представлены ниже.</string>
    <string name="_1_string">1</string>
    <string name="about_1_help_ru">Отображает список сотрудников НБС и территориальных структур. (При подключении к базе данных MySQL данные хранятся здесь. Почему это приложение клиент-сервер? Принцип клиент-сервер используется как в веб-приложении intranet.statistica.md). Информация о сотруднике обновляется в базе данных. И любой сотрудник, у которого установлено это приложение на мобильном телефоне с ОС Android, получает доступ к обновленным данным.</string>
    <string name="about_2_help_ru">2</string>
    <string name="about_help_2">Список открытых данных, которые отображаются о (государственный служащий / сотрудник НБС) и территориальных структурах.</string>
    <string name="Name_2_1_help_ru">2.1</string>
    <string name="name_2_1_help_ru">Имя, Фамилия</string>
    <string name="adress_help_ru">2.2</string>
    <string name="Adress_help_ru_2_2">Расположение - Адрес</string>
    <string name="Floor_help_ru">2.3</string>
    <string name="floor_help_ru6">Этаж</string>
    <string name="Office_help_ru">2.4</string>
    <string name="Office_ru_help_ru">Офис</string>
    <string name="Point_2_5">2.5</string>
    <string name="position_help_ru">Должность</string>
    <string name="Point_help_ru_2_6">2.6</string>
    <string name="Service_help_ru">Служба</string>
    <string name="Point_2_7">2.7</string>
    <string name="Department_help_ru">Отдел</string>
    <string name="Point_2_8">2.8</string>
    <string name="Department_help_ru_2">Управление</string>
    <string name="Point__2_9">2.9</string>
    <string name="Main_department_help_ru">Главное управление</string>
    <string name="Point_2_10">2.10</string>
    <string name="Office_phone_help_ru_2">Служебный телефон</string>
    <string name="Point_2_11">2.11</string>
    <string name="Office_phone_help_ru_4">Служебный мобильный телефон.</string>
    <string name="Point__2_12">2.12</string>
    <string name="Internal_telephone">Внутренний телефон</string>
    <string name="Point_2_13_help_ru">2.13</string>
    <string name="Statistical_survey_4">Статистическое исследование</string>
    <string name="Point_2_14_help_ru">2.14</string>
    <string name="e_mail_help_ru_3">E-mail</string>
    <string name="Point_2_15_help_ru">2.15</string>
    <string name="Personal_information_help_ru_3">Личная информация</string>
    <string name="Point_3_help_ru">3</string>
    <string name="P10">Функция поиска позволяет искать по следующим полям</string>
    <string name="P_3_1_10">3.1</string>
    <string name="_P11">Имя или фамилия</string>
    <string name="P12">3.2</string>
    <string name="P13">По должности</string>
    <string name="_3_3">3.3</string>
    <string name="p15">По главному управлению</string>
    <string name="p16">3.4</string>
    <string name="p17">По управлению</string>
    <string name="p18">3.5</string>
    <string name="p19">По отделу</string>
    <string name="p20">3.6</string>
    <string name="p21">По службе</string>
    <string name="p22">3.7</string>
    <string name="p24">По телефону</string>
    <string name="p25">3.7</string>
    <string name="p27">По адресу</string>
    <string name="p28">3.8</string>
    <string name="p29">По мобильному телефону офиса</string>
    <string name="p30">4</string>
    <string name="p31">Функция поиска выполняет поиск одновременно во всех полях, в которых разрешен поиск.</string>
    <string name="p32">4.1</string>
    <string name="p33">Поиск осуществляется по принципу (появление подстроки в строке).</string>
    <string name="p34">4.2</string>
    <string name="p35">Номера стационарных и мобильных телефонов, адреса электронной почты в профиле, а также внутри профиля, позволяют прямой набор номера простым нажатием.</string>
    <string name="a1">TODO</string>
    <string name="a2">About this application</string>
    <string name="a3">The application for the list of employees was developed to facilitate access to contact information via mobile phone (Operating system: Android).</string>
    <string name="a4">The application includes the list of employee profiles with contact information.</string>
    <string name="a5">The functions provided by the program (List of officials from the NBS (conventional name)) have been grouped into categories and are presented below.</string>
    <string name="a6">1</string>
    <string name="a7">Displays the list of NBS officials and territorial structures. (By connecting to the MySQL database, the data is stored here. Why is a client-server application? The client-server principle is used as in the intranet.statistica.md web application). The employee information is updated in the database. And any employee who has this application installed on their mobile phone, Android OS, accesses the updated data.</string>
    <string name="a8">2</string>
    <string name="a9">List of open data that are displayed about (NBS civil servant / employee) and territorial structures.</string>
    <string name="a10">2.1</string>
    <string name="a12">Name, Surname</string>
    <string name="a13">2.2</string>
    <string name="a15">Location - Address</string>
    <string name="a16">2.3</string>
    <string name="a17">Floor</string>
    <string name="a18">2.4</string>
    <string name="a19">Office</string>
    <string name="a20">2.5</string>
    <string name="a21">Position</string>
    <string name="a24">2.6</string>
    <string name="a25">Service</string>
    <string name="a27">2.7</string>
    <string name="a31">Section</string>
    <string name="a33">2.8</string>
    <string name="a38">Division</string>
    <string name="a40">2.9</string>
    <string name="a41">General Division</string>
    <string name="a42">2.10</string>
    <string name="a45">Official telephone</string>
    <string name="a50">2.11</string>
    <string name="a51">Office mobile phone.</string>
    <string name="a52">2.12</string>
    <string name="a53">Internal telephone</string>
    <string name="a54">2.13</string>
    <string name="a56">Statistical Research</string>
    <string name="a57">2.14</string>
    <string name="a58">E-mail</string>
    <string name="a59">2.15</string>
    <string name="a60">Personal Information</string>
    <string name="a70">3</string>
    <string name="a71">The search function allows you to search by the following fields</string>
    <string name="a72">3.1</string>
    <string name="a73">Name or surname</string>
    <string name="a74">3.2</string>
    <string name="a77">By position</string>
    <string name="a78">3.3</string>
    <string name="by_general_division_11">By General Division</string>
    <string name="_3_4_11_2">3.4</string>
    <string name="by_division_a1">By Division</string>
    <string name="_3_5_a23">3.5</string>
    <string name="by_section_a23">By Section</string>
    <string name="_3_6_234">3.6</string>
</resources>