<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/mMaterialLetterIcon"
            android:padding="5dp"
            android:text="@string/scientist_s_name_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#009968"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/mstarTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/mMaterialLetterIcon"
            android:maxLines="3"
            android:text="@string/scientists_description_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/mdepartTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/mMaterialLetterIcon"
            android:maxLines="3"
            android:text="@string/depart_model"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/msectiaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="100dp"

            android:maxLines="3"
            android:text="@string/sectia_model"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mserviciuTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="130dp"

            android:maxLines="3"
            android:text="@string/sectia_model_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/mphoneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="150dp"

            android:maxLines="3"
            android:text="@string/phone_model"
            android:autoLink="phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/mphonemobileTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="180dp"

            android:maxLines="3"
            android:text="@string/phonemobile_model"
            android:autoLink="phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="220dp"

            android:maxLines="3"
            android:text="@string/e_mail_model"
            android:autoLink="email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mdescriptionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="260dp"

            android:maxLines="3"
            android:text="@string/description_model"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/mformnameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="12dp"
            android:layout_marginTop="300dp"

            android:maxLines="3"
            android:text="@string/formneame_model"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="330dp"

            android:maxLines="3"
            android:text="@string/model_status_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mstatutTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="150dp"
            android:layout_marginTop="330dp"

            android:maxLines="3"
            android:text="@string/status_4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="360dp"

            android:maxLines="3"
            android:text="@string/created_date_model_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mcreated_dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="150dp"
            android:layout_marginTop="360dp"

            android:maxLines="3"
            android:text="@string/created_date_model5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />






        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="400dp"

            android:maxLines="3"
            android:text="@string/remove_date_model6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mremove_dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="150dp"
            android:layout_marginTop="400dp"

            android:maxLines="3"
            android:text="@string/remove_date_model1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

<!--Add date_updated-->

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="420dp"

            android:maxLines="3"
            android:text="@string/date_updated_model1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mdate_updatedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="150dp"
            android:layout_marginTop="420dp"

            android:maxLines="3"
            android:text="@string/date_updated_model3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <!--Add date_updated End -->


<!-- recoverydata-->
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="440dp"

            android:maxLines="3"
            android:text="@string/recovery_data_model4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mrecoverydataTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mNameTxt"
            android:layout_marginStart="150dp"
            android:layout_marginTop="440dp"

            android:maxLines="3"
            android:text="@string/recovery_data_model6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <!-- recoverydata End -->

        <TextView
            android:id="@+id/mGalaxyTxt"
            fontPath="fonts/RobotoCondensed-Regular.ttf"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/galaxy_model_1"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"
            tools:ignore="MissingPrefix,RelativeOverlap" />

        <com.github.ivbaranov.mli.MaterialLetterIcon
            android:id="@+id/mMaterialLetterIcon"
            android:layout_width="@dimen/list_item_avatar_size"
            android:layout_height="@dimen/list_item_avatar_size"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>